# Hykit

./: LICENSE  README.md  pyproject.toml
hykit/: __init__.py  cli.py  file_ops.py  placeholders.py  scaffold.py  template_loader.py
hykit/analyzer/: __init__.py  context.py  issues.py  reporter.py  scanner.py
hykit/analyzer/rules/: __init__.py  assets.py  build_files.py  java_main.py  json_files.py  manifest.py  placeholders.py  scan_errors.py  types.py
hykit/templates/: __init__.py
hykit/templates/plugin-template-main/: README.md  build.gradle  settings.gradle  settings.gradle.kts
hykit/templates/plugin-template-main/src/main/java/dev/{PROJECT_NAME_SNAKE}/: ExamplePlugin.java
hykit/templates/plugin-template-main/src/main/java/dev/{PROJECT_NAME_SNAKE}/commands/: ExampleCommand.java
hykit/templates/plugin-template-main/src/main/java/dev/{PROJECT_NAME_SNAKE}/events/: ExampleEvent.java
hykit/templates/plugin-template-main/src/main/java/dev/{PROJECT_NAME_SNAKE}/plugin/: {PROJECT_NAME_PASCAL}Plugin.java
hykit/templates/plugin-template-main/src/main/resources/: manifest.json  plugin.json
tests/: test_cli.py  test_metadata.py  test_placeholders.py  test_reporter.py  test_scaffold.py  test_validate.py
